--- a/Landing-Page/styles.css
+++ b/Landing-Page/styles.css
@@ -1,6 +1,10 @@
+/* Google Fonts: Roboto Flex */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@300;400;500;600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     outline: none;
+    font-family: 'Roboto Flex', sans-serif;
 }
