--- a/Landing-Page/styles.css
+++ b/Landing-Page/styles.css
@@ -9,10 +9,54 @@
     font-family: 'Roboto Flex', sans-serif;
 }
 
+:root{
+    --padding-container: 100px 0;
+    --main-blue: #004283;
+    --gray: #8290BB;
+    --main-white: #F5F9FF;
+    --gold: #F1F1E6;
+}
+/* main color: #004283*/
+
 .container{
 width: 90%;
 max-width: 1200px;
 margin: 0 auto; /* centra un elemento de manera vertical*/
 overflow: hidden; /* todo lo que salga de este contenedor se oculte */
-background-color: #000;
+padding: var(--padding-container);
+}
+
+.hero{
+    width: 100%;
+    height: 100vh;
+    min-height: 600px;
+    max-height: 800px;
+    position: relative;
+    display: grid;
+    grid-template-rows: 100px 1fr;
+    color: var(--main-white);
+}
+
+.hero::before{
+content: "";
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../img/computer.jpg');
+background-size: cover;
+clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
+z-index: -1; /* para mostrar el contenido de*/
+}
+
+.nav{
+    --padding-container: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.nav-title{
+    
 }
