--- a/Landing-Page/styles.css
+++ b/Landing-Page/styles.css
@@ -1,6 +1,15 @@
 /* Google Fonts: Roboto Flex */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@300;400;500;600&display=swap');
 
+/* Nunito font:
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;1,200;1,300;1,400;1,500;1,600;1,800&family=Roboto+Flex:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,600&display=swap');
+</style>
+
+font-family: 'Nunito', sans-serif;
+*/
+
+
 *{
     margin: 0;
     padding: 0;
@@ -126,7 +135,7 @@ z-index: -1; /* para mostrar el contenido de*/
 }
 
 .subtitle{
-    color: var(--blue-button);
+    color: var(--main-blue);
     font-size: 2rem;
     margin-bottom: 25px;
 }
@@ -135,6 +144,58 @@ z-index: -1; /* para mostrar el contenido de*/
     line-height: 1.7;
 }
 
+.about-main{
+    padding-top: 80px;
+    display: grid;
+    width: 90%;
+    margin: 0 auto;
+    gap: 1em;
+    overflow: hidden;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+
+
 .about-icons{
-    
+    display: grid;
+    gap: 1em;
+    justify-items: center;
+    width: 260px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.about-icon{
+    color: var(--main-blue);
+    font-size: 30px; /* se usa fontsize para cambiar el tamaño de un icono de fontsize*/
+}
+
+.knowledge{ /* parte del fondo. */
+    background-color: var(--gold);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23004283' fill-opacity='0.10'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    overflow: hidden;
+}
+
+.knowledge-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    align-items: center;
+}
+
+.knowledge-paragraph{
+    line-height: 1.7;
+    margin-bottom: 15px;
+}
+
+.knowledge-icon{
+    font-size: 30px;
+}
+
+.knowledge-picture{
+    max-width: 500px;
+}
+
+.knowledge-img{
+    width: 100%;
+    display: block;
 }
